@@ -11,6 +11,7 @@ import (
 	"sync/atomic"
 	"runtime/debug"
 	"encoding/json"
+	"github.com/piotrnar/gocoin"
 	"github.com/piotrnar/gocoin/lib/utxo"
 	"github.com/piotrnar/gocoin/lib/others/sys"
 )
@@ -30,16 +31,16 @@ var (
 		Testnet bool
 		ConnectOnly string
 		Datadir string
-		TextUI struct {
-			Enabled bool
-		}
+		TextUI_Enabled bool
+		UserAgent string
+		UTXOSaveSec uint
 		WebUI struct {
 			Interface string
 			AllowedIP string // comma separated
 			ShowBlocks uint32
 			AddrListLen uint32 // size of address list in MakeTx tab popups
 			Title string
-			PayCommandName string
+			PayCmdName string
 			ServerMode bool
 		}
 		RPC struct {
@@ -65,8 +66,8 @@ var (
 			MaxTxSize uint32
 			// If something is 1KB big, it expires after this many minutes.
 			// Otherwise expiration time will be proportionally different.
-			TxExpireMinPerKB uint
-			TxExpireMaxHours uint
+			ExpireMinPerKB uint
+			ExpireMaxHours uint
 			SaveOnDisk bool
 		}
 		TXRoute struct {
@@ -76,7 +77,7 @@ var (
 		}
 		Memory struct {
 			GCPercTrshold int
-			MaxCachedBlocks uint
+			MaxCachedBlks uint
 			FreeAtStart bool // Free all possible memory after initial loading of block chain
 		}
 		Beeps struct {
@@ -84,22 +85,22 @@ var (
 			ActiveFork bool  // triple beep when there is a fork
 			MinerID string // beep when a bew block is mined with this string in coinbase
 		}
-		HashrateHours uint
-		MiningStatHours uint
-		AverageFeeBlocks uint
-		AverageBlockSizeBlocks uint
-		UserAgent string
 		AllBalances struct {
 			MinValue uint64  // Do not keep balance records for values lower than this
 			UseMapCnt int
 			SaveOnDisk bool
+		}
+		Stat struct {
+			HashrateHrs uint
+			MiningHrs uint
+			FeesBlks uint
+			BSizeBlks uint
 		}
 		DropPeers struct {
 			DropEachMinutes uint // zero for never
 			BlckExpireHours uint // zero for never
 			PingPeriodSec uint // zero to not ping
 		}
-		UTXOWriteTargetSeconds uint
 	}
 
 	mutex_cfg sync.Mutex
@@ -120,14 +121,14 @@ func InitConfig() {
 	CFG.Net.MaxInCons = 10
 	CFG.Net.MaxBlockAtOnce = 3
 
-	CFG.TextUI.Enabled = true
+	CFG.TextUI_Enabled = true
 
 	CFG.WebUI.Interface = "127.0.0.1:8833"
 	CFG.WebUI.AllowedIP = "127.0.0.1"
 	CFG.WebUI.ShowBlocks = 144
 	CFG.WebUI.AddrListLen = 15
 	CFG.WebUI.Title = "Gocoin"
-	CFG.WebUI.PayCommandName = "pay_cmd.txt"
+	CFG.WebUI.PayCmdName = "pay_cmd.txt"
 
 	CFG.RPC.Username = "gocoinrpc"
 	CFG.RPC.Password = "gocoinpwd"
@@ -136,21 +137,20 @@ func InitConfig() {
 	CFG.TXPool.AllowMemInputs = true
 	CFG.TXPool.FeePerByte = 20
 	CFG.TXPool.MaxTxSize = 100e3
-	CFG.TXPool.TxExpireMinPerKB = 180
-	CFG.TXPool.TxExpireMaxHours = 12
+	CFG.TXPool.ExpireMinPerKB = 1800
+	CFG.TXPool.ExpireMaxHours = 120
 
 	CFG.TXRoute.Enabled = true
 	CFG.TXRoute.FeePerByte = 25
 	CFG.TXRoute.MaxTxSize = 100e3
 
 	CFG.Memory.GCPercTrshold = 100 // 100% (Go's default)
-	CFG.Memory.MaxCachedBlocks = 200
+	CFG.Memory.MaxCachedBlks = 200
 
-	CFG.HashrateHours = 12
-	CFG.MiningStatHours = 24
-	CFG.AverageFeeBlocks = 4*6 /*last 4 hours*/
-	CFG.AverageBlockSizeBlocks = 12*6 /*half a day*/
-	CFG.UserAgent = DefaultUserAgent
+	CFG.Stat.HashrateHrs = 12
+	CFG.Stat.MiningHrs = 24
+	CFG.Stat.FeesBlks = 4*6 /*last 4 hours*/
+	CFG.Stat.BSizeBlks = 12*6 /*half a day*/
 
 	CFG.AllBalances.MinValue = 1e5 // 0.001 BTC
 	CFG.AllBalances.UseMapCnt = 100
@@ -184,7 +184,7 @@ func InitConfig() {
 	flag.StringVar(&CFG.Beeps.MinerID, "miner", CFG.Beeps.MinerID, "Monitor new blocks with the string in their coinbase TX")
 	flag.BoolVar(&CFG.TXRoute.Enabled, "txp", CFG.TXPool.Enabled, "Enable Memory Pool")
 	flag.BoolVar(&CFG.TXRoute.Enabled, "txr", CFG.TXRoute.Enabled, "Enable Transaction Routing")
-	flag.BoolVar(&CFG.TextUI.Enabled, "textui", CFG.TextUI.Enabled, "Enable processing TextUI commands (from stdin)")
+	flag.BoolVar(&CFG.TextUI_Enabled, "textui", CFG.TextUI_Enabled, "Enable processing TextUI commands (from stdin)")
 	flag.UintVar(&FLAG.UndoBlocks, "undo", 0, "Undo UTXO with this many blocks and exit")
 	flag.BoolVar(&FLAG.TrustAll, "trust", FLAG.TrustAll, "Trust all scripts inside new blocks (for fast syncig)")
 	flag.BoolVar(&FLAG.UnbanAllPeers, "unban", FLAG.UnbanAllPeers, "Un-ban all peers in databse, before starting")
@@ -230,8 +230,8 @@ func Reset() {
 	UploadLimit = CFG.Net.MaxUpKBps << 10
 	DownloadLimit = CFG.Net.MaxDownKBps << 10
 	debug.SetGCPercent(CFG.Memory.GCPercTrshold)
-	MaxExpireTime = time.Duration(CFG.TXPool.TxExpireMaxHours) * time.Hour
-	ExpirePerKB = time.Duration(CFG.TXPool.TxExpireMinPerKB) * time.Minute
+	MaxExpireTime = time.Duration(CFG.TXPool.ExpireMaxHours) * time.Hour
+	ExpirePerKB = time.Duration(CFG.TXPool.ExpireMinPerKB) * time.Minute
 	if AllBalMinVal != CFG.AllBalances.MinValue {
 		fmt.Println("In order to apply the new value of AllBalMinVal, node's restart is requirted")
 	}
@@ -263,11 +263,17 @@ func Reset() {
 	}
 	SetListenTCP(CFG.Net.ListenTCP, false)
 
-	if CFG.UTXOWriteTargetSeconds != 0 {
-		utxo.UTXO_WRITING_TIME_TARGET = time.Second * time.Duration(CFG.UTXOWriteTargetSeconds)
+	if CFG.UTXOSaveSec != 0 {
+		utxo.UTXO_WRITING_TIME_TARGET = time.Second * time.Duration(CFG.UTXOSaveSec)
 	}
 
 	connect_only = CFG.ConnectOnly!=""
+
+	if CFG.UserAgent!="" {
+		UserAgent = CFG.UserAgent
+	} else {
+		UserAgent = "/Gocoin:"+gocoin.Version+"/"
+	}
 
 	ReloadMiners()
 }
