@@ -30,8 +30,10 @@ func (c *OneConnection) SendVersion() {
 
 	b.Write(nonce[:])
 
-	b.WriteByte(byte(len(common.CFG.UserAgent)))
-	b.Write([]byte(common.CFG.UserAgent))
+	common.LockCfg()
+	btc.WriteVlen(b, uint64(len(common.UserAgent)))
+	b.Write([]byte(common.UserAgent))
+	common.UnlockCfg()
 
 	binary.Write(b, binary.LittleEndian, uint32(common.Last.BlockHeight()))
 	if !common.CFG.TXPool.Enabled {
