@@ -3,5 +3,8 @@ Options +FollowSymLinks
 
 RewriteRule ^gocoin_([a-z0-9_\-]+).html$ page.php\?id=$1 [L]
 
-RewriteRule ^.*$ page.php [L]
+RewriteRule ^$ page.php [L]
+RewriteRule ^/$ page.php [L]
+RewriteRule ^index.html$ page.php [L]
+RewriteRule ^index.php$ page.php [L]
 
